src/pages/Profile/ProfileNav/ProfileAvatar/AvatarChoose/AvatarChoose.module.scss
.avatar_choose_wrapper {
  width: 520px;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.avatar_choose {
  width: 60%;
  height: 60%;
  background-color: white;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.close {
  outline: none;
  position: absolute;
  right: 3px;
  top: 0px;
  margin: 0;
  padding: 0;
  border: none;
  background-color: transparent;
  font-size: 20px;
  color: black;
  cursor: pointer;
}

.avatar_display {
  display: flex;
  overflow: auto;
  flex-wrap: wrap;

  & > button {
    margin: 10px
  }
}

.choose {
  outline: none;
  position: absolute;
  bottom: -40px;
  margin-left: auto;
  margin-right: auto;
  background-color: #426ad2;
  color: white;
  border-radius: 20px;
  margin: 0;
  padding: 0;
  border: none;
  font-size: 20px;
  cursor: pointer;
  width: 320px;
}

